# mairi

./: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  biome.json  docker-compose.yml  package.json  vite.config.ts
.codegraph/: daemon.pid
.husky/: pre-commit  pre-push
be/: .gitignore  Dockerfile  main.py  pyproject.toml
be/app/: models.py
be/app/alembic/: env.py
be/app/alembic/versions/: 50816f38403b_create_user_device_claimcode_table.py  7a3b2c1d8e9f_create_recording_tables.py
be/app/api/: main.py
be/app/api/routes/: devices.py  hello.py  upload.py  users.py
be/app/api/services/: devices.py  upload.py  users.py
be/app/core/: config.py  db.py
be/app/utils/: password.py
be/app/wrapper/: response.py  service.py
be/sample-data/: 20260626_165504.csv  20260626_170222.csv  20260626_172814.csv  session_20260620_125945.csv
fe/: Dockerfile  LICENSE  components.json  package.json  tsconfig.json  vite.config.ts
fe/src/: routeTree.gen.ts  router.tsx
fe/src/components/: breadcrumbs.tsx  error-boundary.tsx  file-uploader.tsx  form-card-skeleton.tsx  github-stars-button.tsx  icons.tsx  nav-main.tsx  nav-projects.tsx  (+3 more)
src/components/: breadcrumbs.tsx  error-boundary.tsx  nav-projects.tsx  nav-user.tsx  search-input.tsx  user-avatar-profile.tsx
src/config/: infoconfig.ts  nav-config.ts
src/constants/: mock-api-users.ts
src/hooks/: use-data-table.ts  use-nav.ts  use-stepper.tsx
src/lib/: format.ts  parsers.ts  query-client.ts  utils.ts
src/routes/: auth.tsx  index.tsx  privacy-policy.tsx
src/types/: data-table.ts  index.ts
(+241 files in other folders)
